add board and journal to action simulation result