@@ -6,7 +6,6 @@ import static org.mockito.Mockito.mock;
 
 import java.util.ArrayList;
 
-import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -20,10 +19,13 @@ import com.agutsul.chess.activity.action.PieceCastlingAction;
 import com.agutsul.chess.activity.action.PieceCastlingAction.CastlingMoveAction;
 import com.agutsul.chess.activity.action.PieceMoveAction;
 import com.agutsul.chess.activity.action.PiecePromoteAction;
+import com.agutsul.chess.board.Board;
 import com.agutsul.chess.board.LabeledBoardBuilder;
 import com.agutsul.chess.board.event.ClearPieceDataEvent;
+import com.agutsul.chess.color.Color;
 import com.agutsul.chess.color.Colors;
 import com.agutsul.chess.event.Observable;
+import com.agutsul.chess.journal.Journal;
 import com.agutsul.chess.piece.PawnPiece;
 
 @ExtendWith(MockitoExtension.class)
@@ -42,16 +44,16 @@ public class ActionValueComparatorTest {
         var action1 = new PieceMoveAction(pawn, positionOf("e3"));
         var action2 = new PieceBigMoveAction(pawn, positionOf("e4"));
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(action1, 1));
-        values.add(Pair.of(action2, 1));
+        values.add(mockSimulationResult(action1, 1));
+        values.add(mockSimulationResult(action2, 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(action2, values.getFirst().getKey());
-        assertEquals(action1, values.getLast().getKey());
+        assertEquals(action2, values.getFirst().getAction());
+        assertEquals(action1, values.getLast().getAction());
     }
 
     @Test
@@ -74,16 +76,16 @@ public class ActionValueComparatorTest {
         var action1 = new PieceCaptureAction(pawn1, pawn);
         var action2 = new PieceCaptureAction(pawn2, knight);
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(action1, 1));
-        values.add(Pair.of(action2, 1));
+        values.add(mockSimulationResult(action1, 1));
+        values.add(mockSimulationResult(action2, 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(action2, values.getFirst().getKey());
-        assertEquals(action1, values.getLast().getKey());
+        assertEquals(action2, values.getFirst().getAction());
+        assertEquals(action1, values.getLast().getAction());
     }
 
     @Test
@@ -108,16 +110,16 @@ public class ActionValueComparatorTest {
         var promoteAction1 = new PiecePromoteAction(moveAction, observable);
         var promoteAction2 = new PiecePromoteAction(captureAction, observable);
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(promoteAction1, 1));
-        values.add(Pair.of(promoteAction2, 1));
+        values.add(mockSimulationResult(promoteAction1, 1));
+        values.add(mockSimulationResult(promoteAction2, 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(promoteAction2, values.getFirst().getKey());
-        assertEquals(promoteAction1, values.getLast().getKey());
+        assertEquals(promoteAction2, values.getFirst().getAction());
+        assertEquals(promoteAction1, values.getLast().getAction());
     }
 
     @Test
@@ -145,16 +147,16 @@ public class ActionValueComparatorTest {
                 new CastlingMoveAction(king,  positionOf("c1"))
         );
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(castlingAction1, 1));
-        values.add(Pair.of(castlingAction2, 1));
+        values.add(mockSimulationResult(castlingAction1, 1));
+        values.add(mockSimulationResult(castlingAction2, 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(castlingAction2, values.getFirst().getKey());
-        assertEquals(castlingAction1, values.getLast().getKey());
+        assertEquals(castlingAction2, values.getFirst().getAction());
+        assertEquals(castlingAction1, values.getLast().getAction());
     }
 
     @Test
@@ -183,16 +185,16 @@ public class ActionValueComparatorTest {
         var enpassantAction1 = new ArrayList<>(board.getActions(blackPawn1, Type.EN_PASSANT));
         var enpassantAction2 = new ArrayList<>(board.getActions(blackPawn2, Type.EN_PASSANT));
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(enpassantAction1.get(0), 1));
-        values.add(Pair.of(enpassantAction2.get(0), 1));
+        values.add(mockSimulationResult(enpassantAction1.get(0), 1));
+        values.add(mockSimulationResult(enpassantAction2.get(0), 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(enpassantAction2.get(0), values.getFirst().getKey());
-        assertEquals(enpassantAction1.get(0), values.getLast().getKey());
+        assertEquals(enpassantAction2.get(0), values.getFirst().getAction());
+        assertEquals(enpassantAction1.get(0), values.getLast().getAction());
     }
 
     @Test
@@ -210,15 +212,22 @@ public class ActionValueComparatorTest {
         Action<?> action1 = new PieceMoveAction(whitePawn, positionOf("e6"));
         Action<?> action2 = new PieceCaptureAction(whitePawn, blackPawn);
 
-        var values = new ArrayList<Pair<Action<?>,Integer>>();
+        var values = new ArrayList<ActionSimulationResult>();
 
-        values.add(Pair.of(action1, 1));
-        values.add(Pair.of(action2, 1));
+        values.add(mockSimulationResult(action1, 1));
+        values.add(mockSimulationResult(action2, 1));
 
         values.sort(new ActionValueComparator());
 
         assertEquals(2, values.size());
-        assertEquals(action2, values.getFirst().getKey());
-        assertEquals(action1, values.getLast().getKey());
+        assertEquals(action2, values.getFirst().getAction());
+        assertEquals(action1, values.getLast().getAction());
+    }
+
+    @SuppressWarnings("unchecked")
+    private static ActionSimulationResult mockSimulationResult(Action<?> action, int value) {
+        return new ActionSimulationResult(
+                mock(Board.class), mock(Journal.class), action, mock(Color.class), 0
+        );
     }
 }
